# rtsp_project

./: 2  CMakeLists.txt  README.md
src/: _.hikshowroom.co.uk.crt  full_chain.crt  main.c  main.cpp  output  rtsp_recv.cpp
